recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: ')' expected but 'if' found.
  if (steps == 0){
  ^Tree:6: error: ';' expected but 'else' found.
  else{
  ^